# clean-bevy-start-project

./: Cargo.toml  readme.md
src/: camera.rs  main.rs  movement.rs  player.rs  scene.rs
