[package]
name = "clean-bevy-start-project"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
bevy-inspector-egui = "0.22.1"
bevy_third_person_camera = "0.1.7"
